crates/mun_codegen/src/snapshots/mun_codegen__test__true_is_true.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn test_true() -> bool {\n        true\n    }\n\n    pub fn test_false() -> bool {\n        false\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i1 @test_true() {
body:
  ret i1 true
}

define i1 @test_false() {
body:
  ret i1 false
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
