crates/mun_codegen/src/snapshots/mun_codegen__test__update_parameter.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add_three(a:i32) -> i32 {\n      a += 3;\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @add_three(i32 %0) {
body:
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %add = add i32 %a1, 3
  store i32 %add, ptr %a, align 4
  %a2 = load i32, ptr %a, align 4
  ret i32 %a2
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
